--- a/JSP/pom.xml
+++ b/JSP/pom.xml
@@ -5,15 +5,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.example</groupId>
-  <artifactId>webShop</artifactId>
+  <artifactId>JSP</artifactId>
   <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>sessionTest</module>
-        <module>JSP</module>
-    </modules>
-    <packaging>pom</packaging>
+  <packaging>war</packaging>
 
-  <name>webShop Maven Webapp</name>
+  <name>JSP Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -33,7 +29,7 @@
   </dependencies>
 
   <build>
-    <finalName>webShop</finalName>
+    <finalName>JSP</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
